[package]
name = "ferris-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "fs"] }
directories = "5.0"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
futures = "0.3"
dashmap = "5"
